update for Java25